# rdmatop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  codeql.yml  ppa-publish.yml  publish.yml  release.yml
debian/: rules
examples/ib/: README.md  ib.sh
examples/kubernetes/: Dockerfile  README.md  daemonset.yaml
examples/pplx/: Makefile  README.md
examples/pytorch/: README.md  allgather.py  allreduce.py  alltoall.py  common.py  reducescatter.py
examples/uccl/ep/amd/: Dockerfile  Makefile  README.md  ep_common.sh  ep_ht.sbatch  ep_ll.sbatch
examples/ucx/: Dockerfile  Makefile  README.md  ucx.sh
src/: gpu.rs  main.rs  netlink.rs  nvlink.rs  rdma.rs  sampler.rs  stat.rs  trace.rs  xgmi.rs
src/tui/: app.rs  events.rs  glyphs.rs  mod.rs  theme.rs  ui.rs
