[package]
name = "rdmatop"
version = "0.1.19"
edition = "2021"
description = "A real-time TUI monitor for RDMA network interfaces"
license = "Apache-2.0"
repository = "https://github.com/uccl-project/rdmatop"
keywords = ["rdma", "efa", "networking", "tui", "infiniband"]
categories = ["network-programming", "command-line-utilities"]

[features]
nvlink = ["dep:nvml-wrapper", "dep:nvml-wrapper-sys"]

[profile.release]
strip = true

[package.metadata.deb]
maintainer = "chang-ning <spiderpower02@gmail.com>"
section = "net"
assets = [
    ["target/release/rdmatop", "usr/bin/", "755"],
]

[dependencies]
libc = "0.2"
ratatui = "0.30"
crossterm = "0.29"
nvml-wrapper = { version = "0.12.1", optional = true }
nvml-wrapper-sys = { version = "0.9.1", optional = true }
