[package]
name = "rdmatop"
version = "0.1.22"
edition = "2021"
description = "A real-time TUI monitor for RDMA network interfaces"
license = "Apache-2.0"
repository = "https://github.com/uccl-project/rdmatop"
keywords = ["rdma", "efa", "networking", "tui", "infiniband"]
categories = ["network-programming", "command-line-utilities"]

[profile.release]
strip = true

[package.metadata.deb]
maintainer = "chang-ning <spiderpower02@gmail.com>"
section = "net"
assets = [
    ["target/release/rdmatop", "usr/bin/", "755"],
]

[dependencies]
alphanumeric-sort = "1.5"
libc = "0.2"
ratatui = "0.30"
crossterm = "0.29"
nvml-wrapper = "0.12.1"
nvml-wrapper-sys = "0.9.1"
libloading = "0.9"
